--- a/css/utlitarios/componentes.css
+++ b/css/utlitarios/componentes.css
@@ -26,3 +26,13 @@
         font-size: 16px;
     }
 }
+
+
+.container{
+    box-sizing: border-box;
+    max-width: 1200px;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-left: auto;
+    margin-right: auto;
+}
