commit full course

--- a/css/style.css
+++ b/css/style.css
@@ -5,4 +5,6 @@
 @import 'utlitarios/tipografia.css';
 @import 'utlitarios/cores.css';
 @import 'bicicletas/bicicletas.css';
+@import 'tecnologia/tecnologia.css';
+@import 'parceiros/parceiros.css'
 
