--- a/css/utlitarios/componentes.css
+++ b/css/utlitarios/componentes.css
@@ -36,3 +36,27 @@
     margin-left: auto;
     margin-right: auto;
 }
+
+.link{
+    display: inline-block;
+    color: var(--cor-p1);
+    font: 500 1.5rem/1,5 'Poppins', sans-serif;
+    text-transform: uppercase;
+}
+
+.link::after{
+    content: '';
+    display: block;
+    width: 100%;
+    height: 4px;
+    background-color: var(--cor-p1);
+
+}
+
+.link:hover{
+    color: white;
+}
+
+.link:hover::after{
+    background-color: white;
+}
