--- a/css/utlitarios/componentes.css
+++ b/css/utlitarios/componentes.css
@@ -11,6 +11,7 @@
     font-size: 18px;
     line-height: 1.33;
     font-weight: bold;
+    max-width: max-content;
 }
 
 
@@ -18,6 +19,15 @@
 
     background: linear-gradient(#FFB600 0%, #c48405 100%);
 
+}
+
+.btn.secundario{
+    background: var(--cor-10);
+    color: var(--cor-2) ;
+}
+
+.btn.btn.secundario:hover{
+    background: var(--cor-9);
 }
 
 @media(max-width: 600px){
