--- a/css/style.css
+++ b/css/style.css
@@ -10,4 +10,5 @@
 @import './depoimento/depoimento.css';
 @import './seguros/seguros.css';
 @import './footer/footer.css';
+@import './termos/termos.css'
 
