--- a/css/bicicletas/bicicletas.css
+++ b/css/bicicletas/bicicletas.css
@@ -1,83 +1,101 @@
-.bicicletas-lista{
-    padding-top: 60px;
-    padding-bottom: 120px;
+.bicicletas-bg:nth-child(odd){
+    background-color: var(--cor-11);
 }
 
-
-.bicicletas-lista h2{
-    margin-bottom: 40px;
-    max-width: 1200px;
-    padding-left: 20px;
-    padding-right: 20px;
-    box-sizing: border-box;
-    margin-left: auto;
-    margin-right: auto;
-
-}
-
-
-.bicicletas-lista ul{
-    display: flex;
+.bicicletas{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
     gap: 40px;
-    padding: 0 20px 20px 20px;
-    max-width: 1440px;
-    margin: 0 auto;
-    overflow-x: auto;
-
+    padding-top: 60px;
+    padding-bottom: 60px;
 }
 
-.bicicletas-lista ul li{
-
-    min-width: 280px;
-    
-    
+.bicicletas-img{
+    position: relative;
 }
 
+.bicicletas-img span{
+    background: var(--cor-12);
+    padding: 8px 16px 8px 8px;
+    display: inline-block;
+    position: absolute;
+    top: 20px;
+    right: 0px;
+    border-radius: 5px 0 0 5px;
+}
 
-.bicicletas-lista a{
+.bicicletas-conteudo{
+    display: grid;
+    grid-template-columns: 1fr auto;
+    align-content: flex-start;
+}
+
+.bicicletas-conteudo h2,
+.bicicletas-conteudo p{
+    grid-column: 1/-1;
+}
+
+.bicicletas-conteudo h2{
+    margin-bottom: 20px;
+}
+
+.bicicletas-conteudo h2::before{
+    content: '';
     display: block;
-}
-
-.bicicletas-lista img{
-    margin-bottom: 16px;
-
-}
-
-.bicicletas-lista h3{
-
+    width: 12px;
+    height: 8px;
+    background-color: var(--cor-p1);
     margin-bottom: 8px;
+}
+
+.bicicletas-conteudo p{
+    margin-bottom: 32px;
+}
+
+.bicicletas a{
+    align-self: flex-end;
+}
+
+.bicicletas li{
     display: flex;
     align-items: center;
-
-}
-
-.bicicletas-lista h3::before{
-    content: '';
-    background-color: var(--cor-p1);
-    height: 8px;
-    width: 12px;
-    display: inline-block;
-    margin-right: 8px;
-    transition: width .4s;
-
-}
-
-.bicicletas-lista li span{
-    padding-left: 20px;
+    
 }
 
 
-.bicicletas-lista a:hover h3::before{
+.bicicletas-conteudo li + li{
+    margin-top: 16px;
+}
+
+.bicicletas-conteudo img{
     width: 24px;
+    margin-right:8px;
 }
 
 
 @media(max-width: 800px){
-    .bicicletas-lista{
-        padding-bottom: 60px;
+    .bicicletas{
+        grid-template-columns: 1fr;
+        gap: 20px;
+        padding-top: 40px;
+        padding-bottom: 40px;
+    }
+}
+
+@media(max-width: 600px){
+    .bicicletas-conteudo{
+        grid-template-columns: 1fr;
     }
 
-    .bicicletas-lista ul{
-        gap: 20px;
+    .bicicletas-conteudo ul{
+        font-size: 1rem;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        margin-bottom: 32px;
+    }
+
+    .bicicletas-conteudo a{
+        align-self: flex-start;
+        
     }
 }
