--- a/css/style.css
+++ b/css/style.css
@@ -10,5 +10,6 @@
 @import './depoimento/depoimento.css';
 @import './seguros/seguros.css';
 @import './footer/footer.css';
-@import './termos/termos.css'
+@import './termos/termos.css';
+@import 'bicicletas/bicicletas-home.css'
 
