--- a/css/style.css
+++ b/css/style.css
@@ -17,4 +17,7 @@
 @import './bicicletas/bicicletas-itens.css';
 @import './bicicletas/bicicleta.css';
 @import './bicicletas/seguro.css';
+@import './contato/contato.css';
+@import './contato/lojas.css';
+@import './utlitarios/formulario.css';
 
