--- a/css/style.css
+++ b/css/style.css
@@ -20,4 +20,5 @@
 @import './contato/contato.css';
 @import './contato/lojas.css';
 @import './utlitarios/formulario.css';
+@import './orcamento/orcamento.css';
 
